--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scrollspy": "^3.4.2",
     "react-slick": "0.25.0",
     "react-top-loading-bar": "^1.2.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "react-wow": "^1.0.0",
     "react-youtube": "^7.9.0",
     "slick-carousel": "^1.8.1",
