--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^3.7.2",
+    "chart.js": "^3.6.0",
     "clsx": "^1.0.4",
     "i18next": "^21.4.0",
     "jss": "^10.3.0",
@@ -16,6 +17,7 @@
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-slider": "^2.0.0",
+    "react-chartjs-2": "^3.3.0",
     "react-countup": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
