--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-scroll-parallax": "^2.1.2",
     "react-scrollspy": "^3.4.2",
     "react-slick": "0.25.0",
+    "react-three-fiber": "^6.0.13",
     "react-top-loading-bar": "^1.2.0",
     "react-vertical-timeline-component": "^3.5.2",
     "react-wow": "^1.0.0",
     "react-youtube": "^7.9.0",
     "slick-carousel": "^1.8.1",
+    "three": "^0.134.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
